--- a/corprules.in
+++ b/corprules.in
@@ -1805,7 +1805,7 @@ AREC an RECENT_V
 RELWORK_MID_X recent work SCI_BY_WHO_SOMETIMES suggests a SCI_SYSTEM for SCI_SYS_VERBING SCI_GENERIC_NOUN, but does not offer an implementation
 RELWORK_MID_X SCI_BY_WHO SCI_PRESENT_VERBED several SCI_BUZZWORD_ADJ SCI_APPROACH_PL RELWORK_CITATION, and reported that they have LIT_GREAT IMPACT SCI_GENERIC_NOUN
 RELWORK_MID_X we had our SCI_APPROACH in mind before SCI_BY_WHO SCI_PROVE_VERBED the RECENT SCI_STATUS_ADJ work on SCI_GENERIC_NOUN
-RELWORK_MID_X SCI_OVERALL_THESIS_THING RELWORK_CITATION proposed by SCI_BY_WHO fails to address several SCI_ADJ SCI_PROBLEM_PL that SCI_OUR_SYSTEM does indeed SCI_PROBLEM_SOLVE
+RELWORK_MID_X SCI_OVERALL_THESIS_THING RELWORK_CITATION proposed by SCI_BY_WHO fails to SCI_PROVE_VERB several SCI_ADJ SCI_PROBLEM_PL that SCI_OUR_SYSTEM does indeed SCI_PROBLEM_SOLVE
 RELWORK_MID_X the SCI_STATUS_ADJ SCI_SYSTEM SCI_BY_WHO_SOMETIMES does not SCI_SYS_VERB SCI_GENERIC_NOUN as well as our SCI_APPROACH
 RELWORK_MID_X unlike SCI_ANUMBER RELATED SCI_APPROACH_PL RELWORK_CITATION, we do not attempt to SCI_SYS_VERB or SCI_SYS_VERB SCI_GENERIC_NOUN
 RELWORK_MID_X instead of SCI_VERBING SCI_GENERIC_NOUN RELWORK_CITATION, we SCI_SOLVE_CLAUSE simply by SCI_VERBING SCI_GENERIC_NOUN
@@ -2717,6 +2717,34 @@ EXP_TYPE_UM	regulation
 #EXP_TYPE_UM	occurence
 #EXP_TYPE_UM	fact
 
+EXP_TYPE_UM diatom
+EXP_TYPE_UM atom
+EXP_TYPE_UM molecule
+EXP_TYPE_UM chemical
+EXP_TYPE_UM proton
+EXP_TYPE_UM neutron
+EXP_TYPE_UM hadron
+EXP_TYPE_UM meson
+EXP_TYPE_UM baryon
+EXP_TYPE_UM assay
+EXP_TYPE_UM technique
+EXP_TYPE_UM oocyte
+EXP_TYPE_UM embryo
+EXP_TYPE_UM population
+EXP_TYPE_UM colony
+EXP_TYPE_UM algorithm
+EXP_TYPE_UM network
+EXP_TYPE_UM processor
+EXP_TYPE_UM CDES
+EXP_TYPE_UM protein
+EXP_TYPE_UM test subject
+EXP_TYPE_UM photon
+EXP_TYPE_UM particle
+EXP_TYPE_UM equation
+EXP_TYPE_UM theorem
+EXP_TYPE_UM pixel 
+EXP_TYPE_UM PREFIXXNSUF
+
 EXP_WHERE_UM	testbed
 EXP_WHERE_UM	market
 EXP_WHERE_UM	scheme
@@ -2924,7 +2952,9 @@ WARE		scientific instruments
 WARE		bioware
 WARE		bio-sensors
 WARE		bio-physics
-WARE+10		nanotechnology
+WARE		nanotechnology
+WARE+10		SCI_THING_P
+WARE+10		SC_FIELD
 
 THE_WILD	corporate COU
 THE_WILD	the workplace
@@ -3109,12 +3139,12 @@ STORAGE			STORAGE_S
 
 STORAGE_DEVICES_N	EVAL_MOD_N
 
-STORAGE_SIZE		EVAL_MOD_N MB
-STORAGE_SIZE		EVAL_MOD_N kB
-STORAGE_SIZE		EVAL_MOD_N GB
-STORAGE_SIZE		EVAL_MOD_N petabytes
-STORAGE_SIZE		EVAL_MOD_N TB
-STORAGE_SIZE		EVAL_MOD_N EVAL_UNIT_UM
+STORAGE_SIZE		EVAL_MOD_NMB
+STORAGE_SIZE		EVAL_MOD_NkB
+STORAGE_SIZE		EVAL_MOD_NGB
+STORAGE_SIZE		EVAL_MOD_N-petabytes
+STORAGE_SIZE		EVAL_MOD_NTB
+STORAGE_SIZE		EVAL_MOD_N-EVAL_UNIT_UM
 
 STORAGE_TYPE		AREAMOD disk
 STORAGE_TYPE		optical drive
@@ -3350,9 +3380,14 @@ EVAL_GUTS_ANALYSIS_3
 
 }
 
-EVAL_GUTS_ANALYSIS_1_A  We first ANALYZE WHICH_EXPERIMENTS EXP_FIG_REF
-EVAL_GUTS_ANALYSIS_1_A  Now for the climactic analysis of WHICH_EXPERIMENTS
-EVAL_GUTS_ANALYSIS_3_A  Lastly, we discuss WHICH_EXPERIMENTS
+EVAL_GUTS_ANALYSIS_1_A  We first ANALYZE WHICH_EXPERIMENTS EXP_FIG_REFMAYBEHERO
+EVAL_GUTS_ANALYSIS_1_A  Now for the climactic analysis of WHICH_EXPERIMENTSMAYBEHERO
+EVAL_GUTS_ANALYSIS_1_A  Now for the denouement of all our hard workMAYBEHERO
+EVAL_GUTS_ANALYSIS_1_A  Now for our incisive summary of the field of SCI_FIELDMAYBEHERO
+EVAL_GUTS_ANALYSIS_3_A  Lastly, we discuss WHICH_EXPERIMENTSMAYBEHERO
+
+MAYBEHERO+2
+MAYBEHERO . HEROIC_OVERSTATEMENT
 
 ANALYZE		analyse
 ANALYZE		explain
@@ -3461,7 +3496,26 @@ EVAL_GUTS_INTRO is it POSSIBLE to justify having paid so little attention to our
 POSCASE POSSIBLE
 POSCASE the case
 
-EVAL_GUTS_EXP_SET EXP_SET_LEADIN we ran four novel experiments: (1) EVAL_EXP; (2) EVAL_EXP; (3) EVAL_EXP; and (4) EVAL_EXP XXX
+EVAL_GUTS_EXP_SET EXP_SET_LEADIN we ran four AMBITIOUS experiments: (1) EVAL_EXP; (2) EVAL_EXP; (3) EVAL_EXP; and (4) EVAL_EXP XXX
+EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we opened up the MOST INSTRUMENTAL HARDWARE_ITEMS to see what would happenOHNO XXX 
+EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we theorised on GENERAL ONION in order to METAVERB INSTRUMENTAL SCI_THING_P XXX
+EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we SCI_PROVE_VERBED WNUM RECENT theorems in the field of SCI_FIELD XXX
+EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we realigned and recoupled the NETWORK_TYPE EXP_WHERE_CMN to SCI_GOAL_ACHIEVE ADJECTIVE PERFORMANCE XXX
+EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we counted our eggs before they hatchedHONO XXX
+EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we conducted three AREAADJ tests: (a)  EVAL_EXP; (b) EVAL_EXP; and (c) EVAL_EXP XXX
+EVAL_GUTS_EXP_SET+5 we SCI_PROVE_VERBED two distinct POSSIBILITY_PL: (I) that SCI_OVERALL_THESIS_PROVE, and (II) that SCI_OVERALL_THESIS_PROVE XXX 
+EVAL_GUTS_EXP_SET+5 we SCI_VERBED a single METHODOLOGY to see what it didOHNO XXX
+EVAL_GUTS_EXP_SET+5 we worked SCI_ADJ_ADV hard to UNDERSTAND the nature of SCIENCEOHNO XXX
+EVAL_GUTS_EXP_SET PETTY_EXCUSE XXX
+
+OHNO+15
+OHNO . Big mistake
+OHNO . Oh god
+OHNO . The less said about that escapade, the better
+OHNO . So that was worthwhile
+OHNO . It turned out we are not allowed in the lab anymore
+OHNO . SCI_ADJ_ADV, we almost got away with it too
+OHNO . We still have yet to locate our EXP_ADJ EXP_WHERE_CMN
 
 EVAL_GUTS_EXP_SET_FOLLOWON
 EVAL_GUTS_EXP_SET_FOLLOWON	we discarded the FINDINGs of some earlier experiments, notably when EVAL_EXP XXX
@@ -3483,6 +3537,19 @@ EXP_SET_LEADIN that being said,
 EXP_SET_LEADIN 
 EXP_SET_LEADIN with these considerations in mind,
 EXP_SET_LEADIN seizing upon this IDEAL configuration,
+EXP_SET_LEADIN it might sound PERVERSE, but
+EXP_SET_LEADIN irrespective of GENERAL OPINION,
+EXP_SET_LEADIN without even taking our annual leave,
+EXP_SET_LEADIN bouncing right back at the SCI_PROBLEM,
+EXP_SET_LEADIN after SCI_ADJ_ADV long lunch breaks,
+EXP_SET_LEADIN by carefully following standard procedure,
+EXP_SET_LEADIN SCI_USING BIGTHEOREM,
+EXP_SET_LEADIN by requisitioning our combined brainpower and acumen,
+EXP_SET_LEADIN SCI_USING our most DEDICATED graduate students,
+EXP_SET_LEADIN by taking the initiative,
+EXP_SET_LEADIN LIT_ALTHOUGH it opens us up to BAD criticism,
+EXP_SET_LEADIN LIT_ALTHOUGH it doesn't help to EVAL_WHY_VERB anything in any way,
+EXP_SET_LEADIN SCI_USING a new SCI_ADJ METHODOLOGY,
 
 IDEAL	ideal
 IDEAL	approximate
@@ -3493,9 +3560,18 @@ THISPLACE locally
 THISPLACE ADVERB
 THISPLACE at CITE_INST
 
-EVAL_EXP	we ran SCI_THING_P on NONZDIGIT nodes spread throughout the NETWORK_TYPE network, and compared them against SCI_THING_P running THISPLACE
+EVAL_EXP	we ran SCI_THING_P on NONZDIGIT nodes spread throughout the NETWORK_TYPE network, and compared them against SCI_THING_P running THISPLACEMAYBE_ESUF
 
-EVAL_EXP	we deployed NONZDIGIT OLD_MACHINEs across the NETWORK_TYPE network, and tested our SCI_THING_P accordingly
+EVAL_EXP	we deployed NONZDIGIT OLD_MACHINEs across the NETWORK_TYPE network, and tested our SCI_THING_P accordinglyMAYBE_ESUF
+
+EVAL_EXP	a LIT_GREAT_ADV_NV SCI_EXPENSIVE SCI_SYSTEM was SCI_VERBED so as to ensure that CONSTRAINT_TYPE would ENSUEMAYBE_ESUF
+EVAL_EXP	an LIT_GREAT_ADV_V LIT_GOOD SCI_SYSTEM was SCI_VERBED to ANALYZE the POSSIBILITY of SCI_BUZZWORD_ADJ CONSTRAINT_TYPEMAYBE_ESUF
+EVAL_EXP	we SCI_PROBLEM_SOLVED RESOURCE_STARVATION in HARDWARE_ITEMS by EMULATING RECENT SCI_APPROACH_PL and EMULATING_THEMMAYBE_ESUF
+EVAL_EXP	we updated the DIFFERENT EXPANSION_ITEMs of yesteryear with RECENT, EXP_ADJ WARE that SCI_CAN SCI_PROVE_VERB CONCEPTMAYBE_ESUF 
+EVAL_EXP 	we SCI_ACHIEVED an overall EVAL_MEASUREMENT_UM of EVAL_MOD_N EVAL_UNIT by EMULATING EVAL_FACT and EMULATING_ITMAYBE_ESUF
+
+MAYBE_ESUF+5 
+MAYBE_ESUF . SCI_RESPONSEX
 
 INTERJEC (as everyone keeps pointing out)
 INTERJEC (and let's face it, who doesn't)
@@ -3608,7 +3684,7 @@ CONCL_MID_X	our SCI_MODEL_TYPE for SCI_VERBING SCI_GENERIC_NOUN is SCI_ADJ_ADV L
 CONCL_MID_X	we also SCI_PRESENT_VERBED SCI_OVERALL_THESIS_THING
 CONCL_MID_X	to SCI_SOLVE_CLAUSE for SCI_GENERIC_NOUN, we SCI_PRESENT_VERBED SCI_OVERALL_THESIS_THING
 CONCL_MID_X SCI_OUR_SYSTEM SCI_MAYBE_CAN successfully SCI_SYS_VERB SCI_ANUMBER SCI_THING_P at once
-CONCL_MID_X one potentially LIT_GREAT SCI_DRAWBACK of SCI_OUR_SYSTEM is that it SCI_CANNOT SCI_SYS_VERB SCI_GENERIC_NOUN; we SCI_AIM to address this in future work
+CONCL_MID_X one potentially LIT_GREAT SCI_DRAWBACK of SCI_OUR_SYSTEM is that it SCI_CANNOT SCI_SYS_VERB SCI_GENERIC_NOUN; we SCI_AIM to SCI_PROVE_VERB this in future work
 CONCL_MID_X the characteristics of SCI_OUR_SYSTEM, in relation to those of more SCI_STATUS_ADJ SCI_SYSTEM_PL, are SCI_ADJ_ADV more SCI_ADJ
 CONCL_MID_X+3 SCI_GENERIC_THESIS_PAST
 CONCL_MID_X CONNECT the SCI_MAIN contribution of our work is that SCI_GENERIC_THESIS_PAST
@@ -4689,6 +4765,7 @@ IMPROVEMENT	amplification
 PERFORMANCE	performance
 PERFORMANCE	throughput
 PERFORMANCE	latency
+PERFORMANCE	output
 
 INSTRUMENTAL	instrumental
 INSTRUMENTAL	crucial
@@ -4960,6 +5037,7 @@ SCI_ADJ_V SCI_IDEAL_V
 #SCI_ADJ_ADV	instantaneously
 SCI_ADJ_ADV+20	particularly
 SCI_ADJ_ADV+5	embarrassingly
+SCI_ADJ_ADV+5	amusingly
 SCI_ADJ_ADV+10	ostensibly
 SCI_ADJ_ADV+10  exceptionally
 SCI_ADJ_ADV+10	surprisingly
@@ -6540,8 +6618,7 @@ EVAL_UNIT_UM	 arb units
 EVAL_UNIT_UM	 PREFIXX-flops
 EVAL_UNIT_UM	 GHz
 EVAL_UNIT_UM	 connections/sec
-EVAL_UNIT+7	EVAL_UNIT_UM
-EVAL_UNIT	EVAL_MOD_N EVAL_UNIT_UM
+EVAL_UNIT	EVAL_UNIT_UM
 
 EVAL_MEASUREMENT_UM throughput
 EVAL_MEASUREMENT_UM speed
@@ -8684,11 +8761,11 @@ SDISCUSS+15 FAMOUSLAST's METANOUN of OBJECTS was a milestone in AREA XXX
 DISCUSS+15 this leaves open the question of PROPNOUN XXX
 SDISCUSS+15 it is well known that ASSERTION XXX
 DISCUSS LIT_LEADIN it is SCI_ADJ to apply the techniques of CITATION to OBJECTS, and RELWORK_CONCL 
-DISCUSS+15 in future work, we SCI_AIM to address questions of PROPNOUN as well as PROPNOUN XXX
+DISCUSS+15 in future work, we SCI_AIM to SCI_PROVE_VERB questions of PROPNOUN as well as PROPNOUN XXX
 DISCUSS+15 the groundbreaking work of FAMOUSLAST on OBJECTS was a major advance in the field of  AREA XXX
-SDISCUSS in CITATION, the authors address the PROPNOUN of OBJECTS under the additional assumption that ASSERTION XXX
+SDISCUSS in CITATION, the authors SCI_PROVE_VERB the PROPNOUN of OBJECTS under the additional assumption that ASSERTION XXX
 SDISCUSS+15 the goal of the present WORK is to METAVERB OBJECTS XXX
-DISCUSS it is not yet known whether ASSERTION, LIT_ALTHOUGH CITATION does address the issue of MATHADJ PROPNOUN XXX
+DISCUSS it is not yet known whether ASSERTION, LIT_ALTHOUGH CITATION does SCI_PROVE_VERB the issue of MATHADJ PROPNOUN XXX
 SDISCUSS in CITATION, the SCI_MAIN result was the METANOUN of OBJECTS XXX
 DISCUSS+15 in this setting, the ability to METAVERB OBJECTS is SCI_IMPORTANTV; LIT_ALTHOUGH GENERAL OPINION states that this SCI_PROBLEM is LIT_OFTEN SCI_PROBLEM_SOLVED by SCI_ADJ SCI_USE of MNOUNS XXX
 SDISCUSS+15 recent interest in OBJECTS has centered on METAVERBING OBJECTS XXX
@@ -9152,6 +9229,7 @@ NSUF ics
 NSUF ulus
 NSUF us
 NSUF work
+NSUF gram
 
 VSUF ate
 VSUF ulate
