--- a/corprules.in
+++ b/corprules.in
@@ -3519,7 +3519,7 @@ EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we opened up the MOST INSTRUMENTAL HARDWARE_I
 EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we theorised on GENERAL ONION in order to METAVERB INSTRUMENTAL SCI_THING_P XXX
 EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we SCI_PROVE_VERBED WNUM RECENT theorems in the field of SCI_FIELD XXX
 EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we realigned and recoupled the NETWORK_TYPE EXP_WHERE_CMN to SCI_GOAL_ACHIEVE ADJECTIVE PERFORMANCE XXX
-EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we counted our eggs before they hatchedHONO XXX
+EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we counted our eggs before they hatchedOHNO XXX
 EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we conducted three AREAADJ tests: (a)  EVAL_EXP; (b) EVAL_EXP; and (c) EVAL_EXP XXX
 EVAL_GUTS_EXP_SET+5 we SCI_PROVE_VERBED two distinct POSSIBILITY_PL: (I) that SCI_OVERALL_THESIS_PROVE, and (II) that SCI_OVERALL_THESIS_PROVE XXX 
 EVAL_GUTS_EXP_SET+5 we SCI_VERBED a single METHODOLOGY to see what it didOHNO XXX
