--- a/corprules.in
+++ b/corprules.in
@@ -3516,7 +3516,7 @@ POSCASE the case
 
 EVAL_GUTS_EXP_SET EXP_SET_LEADIN we ran four AMBITIOUS experiments: (1) EVAL_EXP; (2) EVAL_EXP; (3) EVAL_EXP; and (4) EVAL_EXP XXX
 EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we opened up the MOST INSTRUMENTAL HARDWARE_ITEMS to see what would happenOHNO XXX 
-EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we theorised on GENERAL ONION in order to METAVERB INSTRUMENTAL SCI_THING_P XXX
+EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we theorised on GENERAL OPINION in order to METAVERB INSTRUMENTAL SCI_THING_P XXX
 EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we SCI_PROVE_VERBED WNUM RECENT theorems in the field of SCI_FIELD XXX
 EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we realigned and recoupled the NETWORK_TYPE EXP_WHERE_CMN to SCI_GOAL_ACHIEVE ADJECTIVE PERFORMANCE XXX
 EVAL_GUTS_EXP_SET+5 EXP_SET_LEADIN we counted our eggs before they hatchedOHNO XXX
