--- a/corprules.in
+++ b/corprules.in
@@ -1465,7 +1465,7 @@ DOTOPENER MODEL_INTRO_1
 DOTADDENDUM XXX SCI_INTRO_GENERIC_MID XXX LIT_CONCLUSION, our THISIDEA is summarised thusly
 DOTADDENDUM+4 
 
-DOTS SCI_B_LEADIN_C the following list represents BIGTHEOREM in EVALUATING the ADJECTIVE EVAL_MEASUREMENT_UM ($VAR$) ASSENDER DOTADDENDUM: BULLET BULLET and: \\ \indent $\bullet$ BTEXT. 
+DOTS SCI_B_LEADIN_C the following list represents BIGTHEOREM in EVALUATING the ADJECTIVE EVAL_MEASUREMENT_UM ($VVAR$) ASSENDER DOTADDENDUM: BULLET BULLET and: \\ \indent $\bullet$ BTEXT. 
 
 BULLET+5 \\ \indent $\bullet$ BTEXT;
 BULLET BULLET
@@ -2198,7 +2198,7 @@ EVAL_SEC_INTRO_A	We now discuss our EVALUATION.
 EVAL_SEC_INTRO_A	our EVALUATION represents a valuable research contribution in and of itself.
 EVAL_SEC_INTRO_A	as we will soon see, the goals of this section are manifold.
 
-EVAL_SEC_INTRO_B	the reason for this is that studies have SCI_PROVE_VERBED that EVAL_MEASUREMENT ($VAR$) is roughly PERCENTAGE higher than we SCI_MAY expect CITATION.
+EVAL_SEC_INTRO_B	the reason for this is that studies have SCI_PROVE_VERBED that EVAL_MEASUREMENT ($VVAR$) is roughly PERCENTAGE higher than we SCI_MAY expect CITATION.
 EVAL_SEC_INTRO_B+15	our logic follows a new model: CONSTRAINT_TYPE MATTERS only as long as CONSTRAINT_TAKES a back seat to CONSTRAINT_OR_MEASUREMENT XXX
 EVAL_SEC_INTRO_B+15	TAKE_NOTE_THAT we have intentionally neglected to SCI_VERB PROP_OR_MEASUREMENT XXX
 EVAL_SEC_INTRO_B+15	TAKE_NOTE_THAT we have decided not to SCI_VERB PROP_OR_MEASUREMENT XXX
@@ -8268,8 +8268,8 @@ DEFBODY
 
 
 DEFBODY ASSUMPTION  a OBJECT is a \textbf{MNOUN} if it is PROPPHRASE.
-DEFBODY a OBJECT $VAR$ is \textbf{ADJECTIVE} if COND.
-DEFBODY ASSUMPTION  We say a OBJECT $VAR$ is \textbf{ADJECTIVE} if it is PROPPHRASE.
+DEFBODY a OBJECT $VVAR$ is \textbf{ADJECTIVE} if COND.
+DEFBODY ASSUMPTION  We say a OBJECT $VVAR$ is \textbf{ADJECTIVE} if it is PROPPHRASE.
 
 RESULT THEOREM
 RESULT LEMMA
@@ -8368,8 +8368,8 @@ PROPOSITION ASSUMPTION  Then, ASSERTION: DISPEQ
 PROPOSITION ASSUMPTION  ASSUMPTION  Then ASSERTION. LIT_ALTHOUGH: DISPEQ 
 PROPOSITION ASSUMPTION  ASSUMPTION  LIT_MIDDLE ASSUMPTION  Then, ASSERTION. LIT_LAST ASSERTION: DISPEQ 
 
-COND+5 the MNOUN $VAR$ is PROPPHRASE
-COND+5 the MNOUN $VAR$ is MRELATED $VAR$, SCI_MATH_ADV
+COND+5 the MNOUN $VVAR$ is PROPPHRASE
+COND+5 the MNOUN $VVAR$ is MRELATED $VVAR$, SCI_MATH_ADV
 COND+5 $SHORTEQ$ ASSENDER
 COND the Riemann hypothesis holds
 COND FAMOUSPOS condition is satisfied
@@ -8383,8 +8383,8 @@ ASSUME+3 let us SCI_ASSUME that
 
 ASSUMPTION ASSUME ASSERTION. 
 ASSUMPTION let $SHORTEQ$ be METAVERBED. 
-ASSUMPTION let $VAR$ be a OBJECT. 
-ASSUMPTION ASSUME we are given a OBJECT $VAR$ ASSENDER. 
+ASSUMPTION let $VVAR$ be a OBJECT. 
+ASSUMPTION ASSUME we are given a OBJECT $VVAR$ ASSENDER. 
 ASSUMPTION let $SHORTEQ$ be arbitrary. 
 
 SCI_NOW+10 now
@@ -8763,7 +8763,7 @@ SCI_AIM have resolved
 SDISCUSS in CITATION, it is SCI_PROVE_VERBED that ASSERTION XXX
 SDISCUSS+15 recently, there has been LITTLE interest in the METANOUN of OBJECTS XXX 
 DISCUSS a {}useful survey of the subject can be found in CITATION. RELWORK_FILLER
-DISCUSS+15 LIT_LEADIN it is SCI_IMPORTANTV to consider that $VAR$ may be PROPERTY XXX
+DISCUSS+15 LIT_LEADIN it is SCI_IMPORTANTV to consider that $VVAR$ may be PROPERTY XXX
 SDISCUSS+15 it was FAMOUSLAST who first asked whether OBJECTS can be METAVERBED XXX
 DISCUSS+15 this could shed INSTRUMENTAL light on a conjecture of FAMOUS XXX
 SDISCUSS we wish to extend the results of CITATION to OBJECTS XXX
@@ -8832,10 +8832,10 @@ CONST \aleph_0
 CONST i
 CONST \emptyset
 
-FVAR+10 VAR
-FVAR | VAR |
-FVAR \mid VAR \mid
-FVAR VAR ( VAR )
+FVAR+10 VVAR
+FVAR | VVAR |
+FVAR \mid VVAR \mid
+FVAR VVAR ( VVAR )
 
 THISREL+5 =
 THISREL+3 \ne
@@ -9602,15 +9602,15 @@ ONEVAR+5 {LOWVAR}
 #ONEVAR \mathcal{{UPRVAR}}
 #ONEVAR \mathscr{{UPRVAR}}
 
-VAR+10 { ONEVAR }
-VAR  { ONEVAR_{ ONEVAR } }
-VAR  { ONEVAR_{ ONEVAR,ONEVAR } }
-VAR  { ONEVAR^{ (ONEVAR) } }
-VAR { ONEVAR' }
-VAR { ONEVAR'' }
-VAR { \hat{ ONEVAR } }
-VAR { \tilde{ ONEVAR } }
-VAR { \bar{ ONEVAR } }
+VVAR+10 { ONEVAR }
+VVAR  { ONEVAR_{ ONEVAR } }
+VVAR  { ONEVAR_{ ONEVAR,ONEVAR } }
+VVAR  { ONEVAR^{ (ONEVAR) } }
+VVAR { ONEVAR' }
+VVAR { ONEVAR'' }
+VVAR { \hat{ ONEVAR } }
+VVAR { \tilde{ ONEVAR } }
+VVAR { \bar{ ONEVAR } }
 
 ###########################################################
 ##### Equations
@@ -9649,12 +9649,12 @@ FUNC \sinh
 FUNC \cosh
 FUNC \tanh
 FUNC+2 \log\,
-FUNC+6 VAR
+FUNC+6 VVAR
 
 EXPRC EXPRB BINOP EXPRB
 EXPRC FUNC \left( EXPRB \right)
-EXPRC VAR \left( EXPRB, EXPRB \right)
-EXPRC VAR \left( EXPRB, \dots, EXPRB \right)
+EXPRC VVAR \left( EXPRB, EXPRB \right)
+EXPRC VVAR \left( EXPRB, \dots, EXPRB \right)
 EXPRC FUNC^{-1} \left( EXPRB \right)
 EXPRC+1 EXPRB
 EXPRC \overline{EXPRB}
@@ -9683,21 +9683,21 @@ INTOP \iiint
 INTOP \oint
 
 BIGOP LIMOP
-BIGOP LIMOP_{VAR \to CONST} 
+BIGOP LIMOP_{VVAR \to CONST} 
 BIGOP SUMOP 
-BIGOP SUMOP_{VAR \in VAR} 
-BIGOP SUMOP_{VAR = CONST}^{CONST} 
+BIGOP SUMOP_{VVAR \in VVAR} 
+BIGOP SUMOP_{VVAR = CONST}^{CONST} 
 
 INTLIM INTOP
-INTLIM INTOP_{VAR}
+INTLIM INTOP_{VVAR}
 INTLIM INTOP_{CONST}^{CONST}
 
 
 EXPRD+3 BIGOP EXPRC
-EXPRD+2 INTLIM EXPRC \,d VAR
-EXPRD BIGOP INTLIM EXPRC \,\mathrm{d} VAR
-EXPRD INTLIM BIGOP EXPRC \,\mathrm{d} VAR
-#EXPRD INTLIM INTLIM EXPRC \,\mathrm{d{ VAR \,\mathrm{d} VAR
+EXPRD+2 INTLIM EXPRC \,d VVAR
+EXPRD BIGOP INTLIM EXPRC \,\mathrm{d} VVAR
+EXPRD INTLIM BIGOP EXPRC \,\mathrm{d} VVAR
+#EXPRD INTLIM INTLIM EXPRC \,\mathrm{d{ VVAR \,\mathrm{d} VVAR
 EXPRD+2 \frac{EXPRC}{EXPRC}
 EXPRD EXPRC BINOP EXPRC
 #EXPRD EXPRC BINOP EXPRC BINOP EXPRC
