--- a/corprules.in
+++ b/corprules.in
@@ -5221,6 +5221,9 @@ SCI_PROVE_VERB confirm
 SCI_PROVE_VERB solve
 SCI_PROVE_VERB address
 SCI_PROVE_VERB+3 EVAL_WHY_VERB
+SCI_PROVE_VERB book-learn
+SCI_PROVE_VERB photocopy
+SCI_PROVE_VERB email
 
 SCI_PROVE_VERBED+30 published
 SCI_PROVE_VERBED+30 demonstrated
@@ -5242,6 +5245,9 @@ SCI_PROVE_VERBED+30 medically METAVERBED
 SCI_PROVE_VERBED+30 solved
 SCI_PROVE_VERBED+30 addressed
 SCI_PROVE_VERBED orgasmed out
+SCI_PROVE_VERBED+30 book-learned
+SCI_PROVE_VERBED+30 photocopied
+SCI_PROVE_VERBED+30 emailed
 
 SCI_PROVE_VERBING demonstrating
 SCI_PROVE_VERBING arguing
@@ -5254,6 +5260,9 @@ SCI_PROVE_VERBING confirming
 SCI_PROVE_VERBING disconfirming
 SCI_PROVE_VERBING solving
 SCI_PROVE_VERBING addressing
+SCI_PROVE_VERBING book-learning
+SCI_PROVE_VERBING photocopying
+SCI_PROVE_VERBING emailing
 
 SCI_PRESENT_VERB present
 SCI_PRESENT_VERB introduce
